# minc_plugins

./: .gitignore
pd_clamp/: CMakeLists.txt  main.cpp
